[package]
name = "pallet-staking-atlas"
version = "0.1.0"
edition = "2021"
authors = ["Atlas Team"]
description = "FRAME pallet for staking-atlas with Aura-R DPoS"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
pallet-aura = { workspace = true }
sp-consensus-aura = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "pallet-aura/std",
    "sp-consensus-aura/std",
]
try-runtime = ["frame-support/try-runtime"] 