[package]
name = "pallet-shielded-pool"
version = "0.1.0"
edition = "2021"
description = "Substrate pallet implementing shielded transactions using ZK-SNARKs for Atlas2"
authors = ["Atlas2 Team"]
repository = "https://github.com/username/atlas2"

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

# Substrate frame
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
pallet-balances = { version = "4.0.0", default-features = false }

# Custom pallets
pallet-atlas-balances = { path = "../balances", default-features = false, version = "0.1.0" }

# ZK-related dependencies
arkworks-native-gadgets = { version = "1.0.0", default-features = false, optional = true }
arkworks-r1cs-std = { version = "0.3.0", default-features = false, optional = true }
arkworks-groth16 = { version = "0.3.0", default-features = false, optional = true }
arkworks-snark = { version = "0.3.0", default-features = false, optional = true }

# Primitives
sp-runtime = { version = "4.0.0", default-features = false }
sp-core = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }
sp-io = { version = "4.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "4.0.0", default-features = false }
sp-io = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-atlas-balances/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "arkworks-native-gadgets/std",
    "arkworks-r1cs-std/std",
    "arkworks-groth16/std",
    "arkworks-snark/std",
]
runtime-benchmarks = []
try-runtime = [] 